fix:dark mode on negociacoes and ranking page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
   input,
   textarea,
   select {
-    @apply bg-white text-gray-900;
+    @apply bg-white text-gray-900 dark:bg-[#1f252b] dark:text-gray-100;
   }
 }
